rename model analysis file so as to alleviate my OCD

--- a/modeling/model_metrics.ipynb
+++ b/modeling/model_metrics.ipynb
@@ -22,9 +22,9 @@
     "import pickle\n",
     "\n",
     "from sequential_model import SequentialModel\n",
-    "from modelanalysis import APACHEWrapper\n",
-    "from modelanalysis import gen_auc_plot, gen_calib_plot, gen_prc_plot\n",
-    "from modelanalysis import nri_grid, opr_table\n",
+    "from model_analysis import APACHEWrapper\n",
+    "from model_analysis import gen_auc_plot, gen_calib_plot, gen_prc_plot\n",
+    "from model_analysis import nri_grid, opr_table\n",
     "\n",
     "# Load seaborn to set plot styles\n",
     "import seaborn as sns\n",
